--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Victor Rodriguez. It uses data fromo mapbox.com and darksy.com</p>
         <img class="portrait" src="/img/me.png">
     </div>
     
